k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway
  namespace: default
  labels:
    app: payment-gateway
spec:
  type: ClusterIP
  selector:
    app: payment-gateway
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  sessionAffinity: None
